...
  }

  // Todo list
  Widget _buildTodoList(BuildContext context, TodoLoaded state) {
    if (state.filteredTodos.isEmpty) {
      return const Expanded(
        child: Center(child: Text("No todo")),
      );
    }

    return Expanded(
      child: ListView.builder(
        itemCount: state.filteredTodos.length,
...
  Widget _buildAddTodoButton() {
    return SizedBox(
      width: 80,
      height: 80,
      child: FloatingActionButton(
        onPressed: _showAddTodo,
        tooltip: "Add todo",
        shape: RoundedRectangleBorder(
          borderRadius: BorderRadius.circular(20),
        ),
        child: const Icon(Icons.add, size: 36),
      ),
    );
...
